unpackaged/main/default/objects/Contact/fields/Account_Email_verified__c.field-meta.xml
<CustomField>
    <fullName>Account_Email_verified__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is their email verified on OS accounts?</inlineHelpText>
    <label>Account Email verified</label>
    <type>Checkbox</type>
</CustomField>