unpackaged/main/default/objects/Contact/fields/AccountLongID__c.field-meta.xml
<CustomField>
    <fullName>AccountLongID__c</fullName>
    <formula>Account.LongID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountLongID</label>
    <type>Text</type>
</CustomField>