unpackaged/main/default/objects/Contact/fields/Accounts_ID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_ID__c</fullName>
    <description>ID from OpenStax Accounts server</description>
    <externalId>true</externalId>
    <inlineHelpText>The ID in OS Accounts</inlineHelpText>
    <label>OS Accounts ID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>