unpackaged/main/default/objects/Contact/fields/Accounts_UUID__c.field-meta.xml
<CustomField>
    <fullName>Accounts_UUID__c</fullName>
    <externalId>true</externalId>
    <inlineHelpText>ID used in OS Accounts</inlineHelpText>
    <label>Accounts UUID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>