unpackaged/main/default/objects/Contact/fields/Adoption_date_Less_than_today__c.field-meta.xml
<CustomField>
    <fullName>Adoption_date_Less_than_today__c</fullName>
    <formula>IF(Initial_Adoption_Date__c &lt; TODAY() , true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adoption date Less than today</label>
    <type>Checkbox</type>
</CustomField>