unpackaged/main/default/objects/Contact/fields/Adoption_Status__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status__c</fullName>
    <formula>IF( Current_Students__c  &gt; 0, "Current Adopter",
  IF( Future_Students__c &gt; 0, "Future Adopter",
     IF(OR(Previous_Students__c  &gt;  0,  Past_Students__c  &gt; 0), "Past Adopter", "Not Adopter"
        )
     )
   )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Determines if Contact is adopting ( Current Adopter; Future Adopter; Past Adopter; Not Adopter)</inlineHelpText>
    <label>Adoption Status</label>
    <type>Text</type>
</CustomField>