unpackaged/main/default/objects/Contact/fields/Adoption_Status_Pick__c.field-meta.xml
<CustomField>
    <fullName>Adoption_Status_Pick__c</fullName>
    <inlineHelpText>For automation, Adoption status as a picklist</inlineHelpText>
    <label>Adoption Status P</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Current Adopter</fullName>
            </value>
            <value>
                <fullName>Future Adopter</fullName>
            </value>
            <value>
                <fullName>Past Adopter</fullName>
            </value>
            <value>
                <fullName>Not Adopter</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>