unpackaged/main/default/objects/Contact/fields/AdoptionsJSON__c.field-meta.xml
<CustomField>
    <fullName>AdoptionsJSON__c</fullName>
    <label>AdoptionsJSON</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>