unpackaged/main/default/objects/Contact/fields/All_Emails__c.field-meta.xml
<CustomField>
    <fullName>All_Emails__c</fullName>
    <description>All emails associated with this contact. Populated from leads and from</description>
    <externalId>true</externalId>
    <inlineHelpText>All emails associated with contact</inlineHelpText>
    <label>All Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>