unpackaged/main/default/objects/Contact/fields/All_Time_Savings2__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Savings2__c</fullName>
    <formula>All_Time_Students2__c * 98.57</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Savings for EVERYTHING</inlineHelpText>
    <label>Savings All Time</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>