unpackaged/main/default/objects/Contact/fields/All_Time_Savings__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Savings__c</fullName>
    <formula>98.57 *  To_Date_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Savings for Years up to current year</inlineHelpText>
    <label>Savings To Date</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>