unpackaged/main/default/objects/Contact/fields/All_Time_Students2__c.field-meta.xml
<CustomField>
    <fullName>All_Time_Students2__c</fullName>
    <formula>Future_Students__c +   Current_Students__c + Previous_Students__c + Past_Students__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Students For EVERYTHING</inlineHelpText>
    <label>All Time Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>