unpackaged/main/default/objects/Contact/fields/Ancillaries_opportunity_closed__c.field-meta.xml
<CustomField>
    <fullName>Ancillaries_opportunity_closed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ancillaries opportunity closed</label>
    <type>Checkbox</type>
</CustomField>