unpackaged/main/default/objects/Contact/fields/Ancillary_Interest__c.field-meta.xml
<CustomField>
    <fullName>Ancillary_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ancillary Interest</label>
    <type>Checkbox</type>
</CustomField>