unpackaged/main/default/objects/Contact/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <formula>DATE( YEAR(TODAY()) ,MONTH(Initial_Adoption_Date__c),DAY(Initial_Adoption_Date__c))
+
IF( AND( MONTH(TODAY() ) = 12, DAY(TODAY() ) = 31), 1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>