unpackaged/main/default/objects/Contact/fields/AStatusBroke__c.field-meta.xml
<CustomField>
    <fullName>AStatusBroke__c</fullName>
    <description>Adoption status should be the same as adoption status P</description>
    <formula>Adoption_Status__c =  TEXT(Adoption_Status_Pick__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AStatusBroke</label>
    <type>Checkbox</type>
</CustomField>