unpackaged/main/default/objects/Contact/fields/Average_Time_between_creation_and_adopt__c.field-meta.xml
<CustomField>
    <fullName>Average_Time_between_creation_and_adopt__c</fullName>
    <formula>IF( 
(Initial_Adoption_Date__c  -  DATEVALUE( CreatedDate )) / 365 * 12 &lt; 1, 0, (Initial_Adoption_Date__c - DATEVALUE( CreatedDate )) / 365 * 12
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Average Time between creation and adopt</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>