unpackaged/main/default/objects/Contact/fields/Book_Subject_Difference__c.field-meta.xml
<CustomField>
    <fullName>Book_Subject_Difference__c</fullName>
    <formula>IF(  Number_of_books_adopted__c &gt; Number_of_Subjects__c , Number_of_books_adopted__c - Number_of_Subjects__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Difference between number of books adopted and interested</inlineHelpText>
    <label>Book Subject Difference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>