unpackaged/main/default/objects/Contact/fields/Books_Adopted__c.field-meta.xml
<CustomField>
    <fullName>Books_Adopted__c</fullName>
    <defaultValue>"None"</defaultValue>
    <description>Books being adopted. Populated from Automatic flow</description>
    <inlineHelpText>List of books adopted</inlineHelpText>
    <label>Books Adopted</label>
    <type>TextArea</type>
</CustomField>