unpackaged/main/default/objects/Contact/fields/Books_Adopted_by_School__c.field-meta.xml
<CustomField>
    <fullName>Books_Adopted_by_School__c</fullName>
    <label>Books Adopted by School</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>