unpackaged/main/default/objects/Contact/fields/BookURL__c.field-meta.xml
<CustomField>
    <fullName>BookURL__c</fullName>
    <inlineHelpText>URL they should be sent to based on Interest</inlineHelpText>
    <label>BookURL</label>
    <type>Url</type>
</CustomField>