unpackaged/main/default/objects/Contact/fields/BRI_Marketing__c.field-meta.xml
<CustomField>
    <fullName>BRI_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BRI Marketing</label>
    <type>Checkbox</type>
</CustomField>