unpackaged/main/default/objects/Contact/fields/Campaign_Status__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Status__c</fullName>
    <formula>IF(pi__score__c  &gt;= 300, 'SQL',
IF(AND (pi__score__c  &gt;= 100, pi__score__c  &lt; 300), 'MQL',
IF(AND (pi__score__c  &gt;= 51, pi__score__c  &lt; 100), 'Warm', 
IF(AND (pi__score__c  &gt;= 0, pi__score__c  &lt; 50), 'Cold'
,""
))))</formula>
    <label>Campaign Status</label>
    <type>Text</type>
</CustomField>