unpackaged/main/default/objects/Contact/fields/CC_teacher__c.field-meta.xml
<CustomField>
    <fullName>CC_teacher__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CC teacher</label>
    <type>Checkbox</type>
</CustomField>