unpackaged/main/default/objects/Contact/fields/Community_User_ID__c.field-meta.xml
<CustomField>
    <fullName>Community_User_ID__c</fullName>
    <label>Community User ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>