unpackaged/main/default/objects/Contact/fields/Confirmed_Emails__c.field-meta.xml
<CustomField>
    <fullName>Confirmed_Emails__c</fullName>
    <description>Emails confirmed on Accounts</description>
    <inlineHelpText>All the emails confirmed on OS Accounts</inlineHelpText>
    <label>Confirmed Emails</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>