unpackaged/main/default/objects/Contact/fields/Contractors_Partners_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Contractors_Partners_Identifier__c</fullName>
    <label>Contractors/Partners Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>