unpackaged/main/default/objects/Contact/fields/Contribution_level__c.field-meta.xml
<CustomField>
    <fullName>Contribution_level__c</fullName>
    <inlineHelpText>Set if they have contributed to one of our books</inlineHelpText>
    <label>Contribution level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Neither</fullName>
                <default>true</default>
                <label>Neither</label>
            </value>
            <value>
                <fullName>Author/Content Lead</fullName>
            </value>
            <value>
                <fullName>Reviewer</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Ancillary/Component</fullName>
            </value>
            <value>
                <fullName>Content Donation/Hub Contribution</fullName>
            </value>
            <value>
                <fullName>Advisor/Advocate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>