unpackaged/main/default/objects/Contact/fields/Contribution_Subject__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Subject__c</fullName>
    <inlineHelpText>Subject they contributed in</inlineHelpText>
    <label>Contribution Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Contribution_level__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Algebra and Trigonometry</fullName>
            </value>
            <value>
                <fullName>American Government</fullName>
            </value>
            <value>
                <fullName>Anatomy &amp; Physiology</fullName>
            </value>
            <value>
                <fullName>AP Bio</fullName>
            </value>
            <value>
                <fullName>AP History</fullName>
            </value>
            <value>
                <fullName>AP Macro Econ</fullName>
            </value>
            <value>
                <fullName>AP Micro Econ</fullName>
            </value>
            <value>
                <fullName>AP Physics</fullName>
            </value>
            <value>
                <fullName>Astronomy</fullName>
            </value>
            <value>
                <fullName>Basic College Math</fullName>
            </value>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Business Ethics</fullName>
            </value>
            <value>
                <fullName>Business Statistics</fullName>
            </value>
            <value>
                <fullName>Calculus</fullName>
            </value>
            <value>
                <fullName>Career Readiness</fullName>
            </value>
            <value>
                <fullName>Chem: Atoms First</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>College Algebra</fullName>
            </value>
            <value>
                <fullName>College Physics (Algebra)</fullName>
            </value>
            <value>
                <fullName>College Success</fullName>
            </value>
            <value>
                <fullName>Concepts of Bio (non-majors)</fullName>
            </value>
            <value>
                <fullName>Economics</fullName>
            </value>
            <value>
                <fullName>Elementary Algebra</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Financial Accounting</fullName>
            </value>
            <value>
                <fullName>Finite Algebra</fullName>
            </value>
            <value>
                <fullName>HS Physics</fullName>
            </value>
            <value>
                <fullName>HS Statistics</fullName>
            </value>
            <value>
                <fullName>Intermediate Algebra</fullName>
            </value>
            <value>
                <fullName>Introduction to Business</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>