unpackaged/main/default/objects/Contact/fields/Courses_Teaching_Notes__c.field-meta.xml
<CustomField>
    <fullName>Courses_Teaching_Notes__c</fullName>
    <label>Courses Teaching Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>