unpackaged/main/default/objects/Contact/fields/Courseware_Providers_Used__c.field-meta.xml
<CustomField>
    <fullName>Courseware_Providers_Used__c</fullName>
    <label>Courseware Providers Used</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>