unpackaged/main/default/objects/Contact/fields/Current_Students__c.field-meta.xml
<CustomField>
    <fullName>Current_Students__c</fullName>
    <inlineHelpText>Students For current year (academic year).</inlineHelpText>
    <label>Current Year Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>