unpackaged/main/default/objects/Contact/fields/Current_Term_Students__c.field-meta.xml
<CustomField>
    <fullName>Current_Term_Students__c</fullName>
    <description>Populated by DLRS</description>
    <inlineHelpText>Students For current semester/term</inlineHelpText>
    <label>Current Term Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>