unpackaged/main/default/objects/Contact/fields/Discipline__c.field-meta.xml
<CustomField>
    <fullName>Discipline__c</fullName>
    <label>Discipline</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Humanities</fullName>
            </value>
            <value>
                <fullName>Social Sciences</fullName>
            </value>
            <value>
                <fullName>Business</fullName>
            </value>
            <value>
                <fullName>Essentials</fullName>
            </value>
            <value>
                <fullName>College Success</fullName>
            </value>
            <value>
                <fullName>High School</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>