unpackaged/main/default/objects/Contact/fields/Donations__c.field-meta.xml
<CustomField>
    <fullName>Donations__c</fullName>
    <inlineHelpText>Counts number of donations</inlineHelpText>
    <label>Donations</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>