unpackaged/main/default/objects/Contact/fields/Dont_Renew_After__c.field-meta.xml
<CustomField>
    <fullName>Dont_Renew_After__c</fullName>
    <inlineHelpText>Used for Adjuncts, it's the date we know that the adoption ends</inlineHelpText>
    <label>Dont Renew After</label>
    <type>Date</type>
</CustomField>