unpackaged/main/default/objects/Contact/fields/Downloaded_Book__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Book__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded Book</label>
    <type>Checkbox</type>
</CustomField>