unpackaged/main/default/objects/Contact/fields/Downloaded_Resource__c.field-meta.xml
<CustomField>
    <fullName>Downloaded_Resource__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downloaded Resource</label>
    <type>Checkbox</type>
</CustomField>