unpackaged/main/default/objects/Contact/fields/DupeHierarchy__c.field-meta.xml
<CustomField>
    <fullName>DupeHierarchy__c</fullName>
    <formula>Account.ParentDups__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Checks for duplicate schools under hierarchy</inlineHelpText>
    <label>DupeHierarchy</label>
    <type>Text</type>
</CustomField>