unpackaged/main/default/objects/Contact/fields/Email_alt__c.field-meta.xml
<CustomField>
    <fullName>Email_alt__c</fullName>
    <label>Email alt</label>
    <type>Email</type>
</CustomField>