unpackaged/main/default/objects/Contact/fields/Email_Reference__c.field-meta.xml
<CustomField>
    <fullName>Email_Reference__c</fullName>
    <formula>MOD(VALUE( Contact_Number__c) ,9)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Reference</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>