unpackaged/main/default/objects/Contact/fields/Faculty_Confirmed_Date__c.field-meta.xml
<CustomField>
    <fullName>Faculty_Confirmed_Date__c</fullName>
    <description>The Date that Faculty was verified</description>
    <inlineHelpText>Date faculty status was confirmed</inlineHelpText>
    <label>Faculty Confirmed Date</label>
    <type>Date</type>
</CustomField>