unpackaged/main/default/objects/Contact/fields/Fall_Students__c.field-meta.xml
<CustomField>
    <fullName>Fall_Students__c</fullName>
    <inlineHelpText>Fall students for current school year</inlineHelpText>
    <label>Current SY Fall Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>