unpackaged/main/default/objects/Contact/fields/Form_Stack_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Stack_URL__c</fullName>
    <label>Form Stack URL</label>
    <type>Url</type>
</CustomField>