unpackaged/main/default/objects/Contact/fields/Formsite__c.field-meta.xml
<CustomField>
    <fullName>Formsite__c</fullName>
    <formula>"https://fs10.formsite.com/denverrice/form1/fill?" 
&amp; 
"id87=" 
&amp; 
 SUBSTITUTE(FirstName,  " ", "%20")  
&amp; 
"&amp;id0=" 
&amp; 
 SUBSTITUTE(LastName,  " ", "%20")  
&amp; 
"&amp;id13=" 
&amp; 
Email 
&amp; 
"&amp;id4=" 
&amp; 
Account.HTML_Name__c 
&amp; 
"&amp;id110=" 
&amp; 
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>URL for renewal form</inlineHelpText>
    <label>Formsite</label>
    <type>Text</type>
</CustomField>