unpackaged/main/default/objects/Contact/fields/Formsite_Business__c.field-meta.xml
<CustomField>
    <fullName>Formsite_Business__c</fullName>
    <formula>"https://fs10.formsite.com/denverrice/form2/fill?"
&amp;
"&amp;9="
&amp;
 SUBSTITUTE(FirstName, " ", "%20") 
&amp;
"&amp;10="
&amp;
 SUBSTITUTE(LastName, " ", "%20") 
&amp;
"&amp;11="
&amp;
Email
&amp;
"&amp;12="
&amp;
Phone
&amp;
"&amp;13="
&amp;
Account.HTML_Name__c
&amp;
"&amp;4="
&amp;
Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formsite Business</label>
    <type>Text</type>
</CustomField>