unpackaged/main/default/objects/Contact/fields/Formsite_No__c.field-meta.xml
<CustomField>
    <fullName>Formsite_No__c</fullName>
    <formula>Formsite__c &amp; "&amp;10=3"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formsite No</label>
    <type>Text</type>
</CustomField>