unpackaged/main/default/objects/Contact/fields/Formsite_Yes__c.field-meta.xml
<CustomField>
    <fullName>Formsite_Yes__c</fullName>
    <formula>Formsite__c &amp; "&amp;10=1"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formsite Yes</label>
    <type>Text</type>
</CustomField>