unpackaged/main/default/objects/Contact/fields/From_Lead__c.field-meta.xml
<CustomField>
    <fullName>From_Lead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>From Lead</label>
    <type>Checkbox</type>
</CustomField>