unpackaged/main/default/objects/Contact/fields/Future_Students__c.field-meta.xml
<CustomField>
    <fullName>Future_Students__c</fullName>
    <inlineHelpText>Students For next year (academic year).</inlineHelpText>
    <label>Next Year Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>