unpackaged/main/default/objects/Contact/fields/FV_Status__c.field-meta.xml
<CustomField>
    <fullName>FV_Status__c</fullName>
    <label>FV Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>FV_Status</valueSetName>
    </valueSet>
</CustomField>