unpackaged/main/default/objects/Contact/fields/Goes_by__c.field-meta.xml
<CustomField>
    <fullName>Goes_by__c</fullName>
    <label>Goes by</label>
    <length>25</length>
    <type>Text</type>
</CustomField>