unpackaged/main/default/objects/Contact/fields/Grant_Tutor_Access__c.field-meta.xml
<CustomField>
    <fullName>Grant_Tutor_Access__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Grant Tutor Access</label>
    <type>Checkbox</type>
</CustomField>