unpackaged/main/default/objects/Contact/fields/Has_filled_out_Adoption_Form__c.field-meta.xml
<CustomField>
    <fullName>Has_filled_out_Adoption_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has filled out Adoption Form</label>
    <type>Checkbox</type>
</CustomField>