unpackaged/main/default/objects/Contact/fields/Has_OS_account__c.field-meta.xml
<CustomField>
    <fullName>Has_OS_account__c</fullName>
    <formula>IF(ISBLANK(Accounts_UUID__c), False, True)</formula>
    <inlineHelpText>Does the contact have an OpenStax Accounts UUID?</inlineHelpText>
    <label>Has OpenStax account</label>
    <type>Checkbox</type>
</CustomField>