unpackaged/main/default/objects/Contact/fields/Have_Xanedu__c.field-meta.xml
<CustomField>
    <fullName>Have_Xanedu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have Xanedu</label>
    <type>Checkbox</type>
</CustomField>