unpackaged/main/default/objects/Contact/fields/How_did_you_Hear__c.field-meta.xml
<CustomField>
    <fullName>How_did_you_Hear__c</fullName>
    <label>How did you Hear?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>How_did_you_Hear</valueSetName>
    </valueSet>
</CustomField>