unpackaged/main/default/objects/Contact/fields/How_many_years__c.field-meta.xml
<CustomField>
    <fullName>How_many_years__c</fullName>
    <formula>TEXT(ROUND((TODAY()+10 - Initial_Adoption_Date__c) / 365 ,0))
&amp;
IF( ROUND((TODAY()+10 - Initial_Adoption_Date__c) / 365 ,0) &gt; 1 , " years ago", " year ago")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>How many years</label>
    <type>Text</type>
</CustomField>