unpackaged/main/default/objects/Contact/fields/Inactive_course__c.field-meta.xml
<CustomField>
    <fullName>Inactive_course__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inactive course</label>
    <type>Checkbox</type>
</CustomField>