unpackaged/main/default/objects/Contact/fields/Initial_Adoption_Date__c.field-meta.xml
<CustomField>
    <fullName>Initial_Adoption_Date__c</fullName>
    <inlineHelpText>The date we first learned of their adoption</inlineHelpText>
    <label>Initial Adoption Date</label>
    <type>Date</type>
</CustomField>