unpackaged/main/default/objects/Contact/fields/Initial_tutor_date__c.field-meta.xml
<CustomField>
    <fullName>Initial_tutor_date__c</fullName>
    <label>Initial tutor date</label>
    <type>Date</type>
</CustomField>