unpackaged/main/default/objects/Contact/fields/Interested_in_Rover__c.field-meta.xml
<CustomField>
    <fullName>Interested_in_Rover__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interested in Rover</label>
    <type>Checkbox</type>
</CustomField>