unpackaged/main/default/objects/Contact/fields/Last_Email_Engagement_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Email_Engagement_Action_Completed__c</fullName>
    <label>Last Email Engagement Action Completed</label>
    <type>TextArea</type>
</CustomField>