unpackaged/main/default/objects/Contact/fields/Last_In_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_In_Touch_Date__c</fullName>
    <inlineHelpText>Most recent date the contact was in touch with us</inlineHelpText>
    <label>Last In Touch Date</label>
    <type>Date</type>
</CustomField>