unpackaged/main/default/objects/Contact/fields/Last_OSweb_Login_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_OSweb_Login_Date__c</fullName>
    <description>The most recent time that this contact has logged in on OSweb</description>
    <label>Last OSweb Login Date</label>
    <type>Date</type>
</CustomField>