unpackaged/main/default/objects/Contact/fields/Last_Page_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Page_Action_Completed__c</fullName>
    <label>Last Page Action Completed</label>
    <type>TextArea</type>
</CustomField>