unpackaged/main/default/objects/Contact/fields/Last_Resource_Download_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Resource_Download_Date__c</fullName>
    <label>Last Resource Download Date</label>
    <type>Date</type>
</CustomField>