unpackaged/main/default/objects/Contact/fields/Last_Site_Action_Completed__c.field-meta.xml
<CustomField>
    <fullName>Last_Site_Action_Completed__c</fullName>
    <label>Last Site Action Completed</label>
    <type>TextArea</type>
</CustomField>