unpackaged/main/default/objects/Contact/fields/Launch_Trigger__c.field-meta.xml
<CustomField>
    <fullName>Launch_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Launch Trigger</label>
    <type>Checkbox</type>
</CustomField>