unpackaged/main/default/objects/Contact/fields/LMS_Option__c.field-meta.xml
<CustomField>
    <fullName>LMS_Option__c</fullName>
    <label>LMS Option</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Blackboard</fullName>
            </value>
            <value>
                <fullName>Canvas</fullName>
            </value>
            <value>
                <fullName>D2L (Desire2Learn)</fullName>
            </value>
            <value>
                <fullName>Moodle</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>