unpackaged/main/default/objects/Contact/fields/LongID__c.field-meta.xml
<CustomField>
    <fullName>LongID__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Case sensitive ID</inlineHelpText>
    <label>LongID</label>
    <type>Text</type>
</CustomField>