unpackaged/main/default/objects/Contact/fields/Manual_Check__c.field-meta.xml
<CustomField>
    <fullName>Manual_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manual Check</label>
    <type>Checkbox</type>
</CustomField>