unpackaged/main/default/objects/Contact/fields/Market_Group__c.field-meta.xml
<CustomField>
    <fullName>Market_Group__c</fullName>
    <inlineHelpText>Group based on subject interest, combines like things</inlineHelpText>
    <label>Market Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>