unpackaged/main/default/objects/Contact/fields/Marketing_Group__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Group__c</fullName>
    <formula>"test"</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Group based on subject interest, combines like things</inlineHelpText>
    <label>Marketing Group</label>
    <type>Text</type>
</CustomField>