unpackaged/main/default/objects/Contact/fields/Master_Review__c.field-meta.xml
<CustomField>
    <fullName>Master_Review__c</fullName>
    <label>Master Picklist</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Needs Review</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>No Change</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>