unpackaged/main/default/objects/Contact/fields/Most_Recent_Case__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Case__c</fullName>
    <label>Most Recent Case Date</label>
    <type>DateTime</type>
</CustomField>