unpackaged/main/default/objects/Contact/fields/Most_Recent_Lead_Date__c.field-meta.xml
<CustomField>
    <fullName>Most_Recent_Lead_Date__c</fullName>
    <label>Most Recent Lead Date</label>
    <type>DateTime</type>
</CustomField>