unpackaged/main/default/objects/Contact/fields/Newsletter_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Newsletter_Opt_Out__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>True if they do NOT want newsletter</inlineHelpText>
    <label>Newsletter Opt Out</label>
    <type>Checkbox</type>
</CustomField>