unpackaged/main/default/objects/Contact/fields/Next_Term_Students__c.field-meta.xml
<CustomField>
    <fullName>Next_Term_Students__c</fullName>
    <description>Populated by DLRS</description>
    <inlineHelpText>Students For next semester/term</inlineHelpText>
    <label>Next Term Students</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>