unpackaged/main/default/objects/Contact/fields/Number_of_Adoptions_for_Bookstore__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Adoptions_for_Bookstore__c</fullName>
    <label>Number of Adoptions for Bookstore</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>