unpackaged/main/default/objects/Contact/fields/Number_of_books_adopted__c.field-meta.xml
<CustomField>
    <fullName>Number_of_books_adopted__c</fullName>
    <formula>IF(OR(Books_Adopted__c="None",ISBLANK(Books_Adopted__c)),0,
LEN( Books_Adopted__c )-LEN(SUBSTITUTE(Books_Adopted__c,",",""))+1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Counts number of adoptions</inlineHelpText>
    <label>Number of books adopted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>